[gd_scene load_steps=7 format=2]

[ext_resource path="res://player/heart.tscn" type="PackedScene" id=1]
[ext_resource path="res://Bullets/bullet_dollar/Dollar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Bullets/bullet_dimond/Dimond.tscn" type="PackedScene" id=3]
[ext_resource path="res://Attacks/Phase1/Attack1/attack_1_script.gd" type="Script" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 280, 150, 0, 0, 0, 0, 510, 150, 0, 0, 0, 0, 720, 150 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 300, 430, 0, 0, 0, 0, 710, 430 )
}

[node name="Attack1" type="Node2D"]
script = ExtResource( 4 )
bullet_scene = ExtResource( 3 )
bullet_scene_2 = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 495, 337 )

[node name="DimondPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="DimondSpawnLocation" type="PathFollow2D" parent="DimondPath"]
position = Vector2( 280, 150 )

[node name="BulletSpawnTimer" type="Timer" parent="."]
wait_time = 1.6
autostart = true

[node name="DollarPath" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="DollarSpawnLocation" type="PathFollow2D" parent="DollarPath"]
position = Vector2( 300, 430 )

[node name="BorderField" type="ColorRect" parent="."]
margin_left = 280.0
margin_top = 146.0
margin_right = 720.0
margin_bottom = 434.0

[node name="Field" type="ColorRect" parent="BorderField"]
margin_left = 7.0
margin_top = 7.0
margin_right = 432.0
margin_bottom = 281.0
color = Color( 0, 0, 0, 1 )

[node name="Heart" parent="." instance=ExtResource( 1 )]
position = Vector2( 338, 272 )

[connection signal="timeout" from="BulletSpawnTimer" to="." method="_on_BulletSpawnTimer_timeout"]
